# procrustes

./: .bandit.yml  .buildinfo  .codecov.yml  .coveragerc  .gitignore  .readthedocs.yml  .roberto.yaml  .travis.yml  CITATION.cff  CNAME  HEADER  README.md  codecov.yml  genindex.html  index.html  index.md  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  updateheaders.py  usr_doc_installization.html  usr_doc_tutorials.html  usr_doc_zref.html
.github/workflows/: ci.yml  ci_codecov.yml  ci_rob.yml  ci_tox.yml  deploy_website.yaml  pypi_release.yaml  testing.yml
_downloads/3edd039b8c0e4e46c832249d0630d07a/: Chirality_Check.ipynb
_downloads/5296730a5fce3474b4cc1f94d89399b8/: Chemical_Structure_Alignment.ipynb
_downloads/7517804d6d98d14e0383cf5ebb02b21b/: Quick_Start.ipynb
_modules/: index.html
_modules/procrustes/: generalized.html  generic.html  kopt.html  orthogonal.html  permutation.html  rotational.html  softassign.html  symmetric.html  utils.html
_sources/: index.rst  usr_doc_installization.rst  usr_doc_zref.rst
_sources/api/: generalized.rst  generic.rst  orthogonal.rst  permutation.rst  rotational.rst  symmetric.rst  utils.rst
_sources/notebooks/: Chemical_Structure_Alignment.ipynb
_static/: documentation_options.js
api/: api_index.html  generalized.html  generic.html  kopt.html  orthogonal.html  permutation.html  rotational.html  softassign.html  symmetric.html  utils.html
conda.recipe/: meta.yaml
doc/: Makefile  conf.py  index.rst  make.bat  procrustes_base.rst  procrustes_orthogonal.rst  procrustes_orthogonal_2sided.rst  procrustes_orthogonal_2sided_1trans.rst  procrustes_permutation.rst  procrustes_permutation_2sided_1trans.rst  procrustes_rotational.rst  procrustes_symmetric.rst  requirements.txt  tech_api.rst  usr_doc_installation.rst  usr_doc_installization.rst  usr_doc_tutorials.rst  zreference.bib
doc/api/: api_index.rst  generalized.rst  generic.rst  kopt.rst  psdp.rst  softassign.rst  symmetric.rst  utils.rst
doc/notebooks/: Atom_Atom_Mapping.ipynb  Chemical_Structure_Alignment.ipynb  Chirality_Check.ipynb  Quick_Start.ipynb  Ranking_by_Reordering.ipynb
doc/notebooks/notebook_data/chirality_checking/: enantiomer1.xyz
docs/: conf.py  index.rst  intro_about.rst  intro_citing.rst  intro_contact.rst  intro_license.rst  requirements.txt  table_procrustes.inc  usr_doc_atom_mapping.rst  usr_doc_chem_align.rst  usr_doc_chiral_check.rst  usr_doc_installization.rst  usr_doc_protein_align.rst  usr_doc_quick_start.rst  usr_doc_ranking.rst  usr_doc_tutorials.rst  usr_doc_zref.rst  zreference.bib
docs/api/: api_index.rst  api_index.rst.bak  generalized.rst  generic.rst  kopt.rst  orthogonal.rst  permutation.rst  rotational.rst  softassign.rst  symmetric.rst  utils.rst
docs/examples/atom_mapping/: atom_mapping.cdx  atom_mapping.py  atom_mapping0.cdx  atom_mapping2.cdx
docs/examples/chirality_check/: R.sdf  S.sdf  check_chirality.py  plot_coordinates.py
docs/examples/protein_alignment/: protein_align.py  protein_plot.py
docs/examples/ranking/: ranking.py
docs/notebooks/: Atom_Atom_Mapping.ipynb  Chemical_Structure_Alignment.ipynb  Chirality_Check.ipynb  Protein_Structure_Alignment.ipynb  Quick_Start.ipynb  Ranking_by_Reordering.ipynb
docs/notebooks/notebook_data/chirality_checking/: enantiomer2.xyz
notebooks/: Atom_Atom_Mapping.html  Chemical_Structure_Alignment.html  Chirality_Check.html  Quick_Start.html  Ranking_by_Reordering.html
procrustes/: __init__.py  base.py  generalized.py  generic.py  heuristic.py  kopt.py  orthogonal.py  orthogonal_2sided.py  orthogonal_2sided_1trans.py  permutation.py  permutation_2sided_1trans.py  procrustes_orthogonal.py  procrustes_permutation.py  procrustes_rotational_orthogonal.py  procrustes_symmetric.py  procrustes_two_sided_orthogonal.py  procrustes_two_sided_orthogonal_single_transformation.py  procrustes_two_sided_permutation_single_transformation.py  psdp.py  rotational.py  softassign.py  symmetric.py  utils.py  version.py  woodgate.py
procrustes/PSDP/: PSDP.py  input.py
procrustes/hungarian/: __init__.py  hungarian_algorithm.py
procrustes/test/: __init__.py  common.py  psdp.py  test_base.py  test_generalized.py  test_generic.py  test_heuristic.py  test_kopt.py  test_orthogonal.py  test_orthogonal_2sided.py  test_orthogonal_2sided_1trans.py  test_permutation.py  test_permutation_2sided_1trans.py  test_procrustes.py  test_psdp.py  test_rotational.py  test_softassign.py  test_symmetric.py  test_utils.py
tools/conda.recipe/: meta.yaml
